--- a/index.css
+++ b/index.css
@@ -49,7 +49,8 @@ body {
 .content {
   position: relative;
   /* top | right | bottom | left */
-  margin: 0% 20% 2.5% 20%;
+  margin: 0% 30% 0% 30%;
+  padding-bottom: 30px;
   text-align: center;
 }
 
