--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body {
   }
   h1 {
     color: var(--text);
-    font-size: 7vh;
+    font-size: 6vh;
     font-weight: bolder;
   }
   h2 {
@@ -40,7 +40,7 @@ body {
 
 .header {
   /* top | right | bottom | left */
-  margin: 2.5% 20% 0% 20%;
+  margin: 2.5% 5% 0% 5%;
   text-align: center;
 }
   
@@ -48,9 +48,16 @@ body {
 .content {
   position: relative;
   /* top | right | bottom | left */
-  margin: 0% 30% 0% 30%;
+  margin: 0% 25% 0% 25%;
   padding-bottom: 30px;
   text-align: center;
+}
+
+footer {
+	/* top | right | bottom | left*/
+	margin: 0% 20% 0% 20%;
+	text-align: center;
+	padding-bottom: 20px
 }
 
 img {
@@ -60,15 +67,15 @@ img {
 	height: auto;
 }
 
-footer {
-	padding-bottom: 30px
-}
-
 img#platinum {
 	max-width: 25%;
 	height: auto;
 }
 
+img#maxiroof {
+	max-width: 25%;
+	height: auto;
+}
 
 a:hover {
   /*background: radial-gradient(#858e96, #60696b);*/
