--- a/index.css
+++ b/index.css
@@ -72,6 +72,11 @@ img#platinum {
 	height: auto;
 }
 
+img#jerry {
+	max-width: 35%;
+	height: auto;
+}
+
 img#maxiroof {
 	max-width: 25%;
 	height: auto;
