--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html {
 }
 body {
     /*font-family: Arial, Helvetica, sans-serif; */
-    /*font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	background: var(--background);
     height: 100%;
     margin: 0;
@@ -34,7 +34,14 @@ body {
     color: var(--text);
     font-size: 3vh;
     padding: 0px;
-    text-align: center;
+    text-align: left;
+    margin: 0;
+  }
+  li {
+    color: var(--text);
+    font-size: 3vh;
+    padding: 0px;
+    text-align: left;
     margin: 0;
   }
 
@@ -48,9 +55,13 @@ body {
 .content {
   position: relative;
   /* top | right | bottom | left */
-  margin: 0% 25% 0% 25%;
+  margin: 0% 15% 0% 15%;
   padding-bottom: 30px;
-  text-align: center;
+  text-align: left;
+}
+
+.content ul {
+  text-align: left;
 }
 
 footer {
@@ -60,7 +71,7 @@ footer {
 	padding-bottom: 20px
 }
 
-img {
+.content img {
 	  /* top | right | bottom | left */
 	margin: 0% 0% 0% 0%;
 	max-width:15%;  
@@ -97,6 +108,11 @@ img#lawyerup {
 	height: auto;
 }
 
+img#wrenchfund_logo {
+  max-width: 20%;
+  height: auto;
+}
+
 a:hover {
   /*background: radial-gradient(#858e96, #60696b);*/
   background: #60696b;
@@ -105,5 +121,31 @@ a:hover {
   -webkit-text-fill-color: transparent;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  position: relative;
+  /* top | right | bottom | left */
+  margin: 0% 5% 5% 5%;
+  text-align: center;
+}
 
+@media screen and (max-width: 768px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+  
+}
+
+.item {
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+}
+
+.item img {
+  width: 80%;
+  height: auto;
+}
 
